# Revision history for Perl module autobox::Transform

{{$NEXT}}

 * Make $hash->map_each() official by documenting it


1.012 2016-07-07T17:10:47Z

 * Require perl 5.10, to avoid bogus test failures on unsupported
   versions. This resolves issue #2: Fails with perls < 5.10


1.011 2016-07-07T12:57:42Z

 * Rename Hash grep -> grep_each, grep_defined -> grep_each_defined
   - This is why they're undocumented

 * map_each, map_each_to_array Hash method (so far undocumented)


1.010 2016-06-04T06:59:49Z

 * grep, grep_defined Hash methods (so far undocumented)


1.009 2016-06-05T21:24:57Z

 * More doc improvements, examples


1.008 2016-06-04T16:51:58Z

 * Docs fixes and improvements


1.007 2016-06-04T16:19:00Z

 * Add new transform: uniq_by


1.006 2016-04-29T08:30:01Z

 * key_value* Hash methods (so far undocumented)


1.004 2016-03-06T12:23:17Z

 * Cleaner docs



1.003 2016-03-05T22:02:59Z

 * map_by, grep_by, group_by can look up hash keys as well as make
   method calls



1.002 2016-03-01T14:00:06Z

 * Fix #1: Add cpanfile deps



1.001 2016-02-28T22:18:35Z

 * Documentation for all methods



1.000 2016-02-28T21:37:22Z

 * Original version